tests/check_output/snapshots/errors__check_output__main@use_inject_on_impl.snap
---
source: tests/check_output/mod.rs
expression: pretty
---
Stdout:


Stderr:
error: expected `use`
       
         = help: #[use_inject(...)] is expected to be placed on a use item
       
  --> examples/use_inject_on_impl.rs:85:5
   |
85 |     impl CoffeeLogger {
   |     ^^^^

error[E0433]: failed to resolve: use of undeclared type `SingletonFactoryCoffeeLogger`
  --> examples/use_inject_on_impl.rs:31:28
   |
31 |     logger: singleton_bind(CoffeeLogger),
   |                            ^^^^^^^^^^^^ use of undeclared type `SingletonFactoryCoffeeLogger`

For more information about this error, try `rustc --explain E0433`.
error: could not compile `coffee` (example "use_inject_on_impl") due to 2 previous errors
